[Mac] Prevent extension icon animation when window not visible.

When you drag a tab out of its window the extension icons animate into
position even though it should appear that the tab and its controls
are being removed as-is from their window. This makes the tab dragging
effect look klunky and unpolished.

R=avi@chromium.org
BUG=601264

Review URL: https://codereview.chromium.org/1862243006

Cr-Commit-Position: refs/heads/master@{#386096}

Former-commit-id: 5a583e6115fec107f2d4a1cffa69d5f572d89a57